--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "license": "ISC",
   "description": "Personal financial app",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "knex": "^3.1.0",
+    "mysql2": "^3.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
