--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server",
   "type": "module",
   "author": "Renan França",
   "license": "ISC",
