--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "license": "ISC",
   "description": "Personal financial app",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-bearer-token": "^2.4.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "mysql2": "^3.7.0"
   },
